--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
   </head>
   <body>
-    <label>yhdk</label>
+    <label id="test">yhdk</label>
     <script src="script.js"></script>
   </body>
 </html>
