--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE>
 <html>
   <head>
-  
+    <link rel="stylesheet" href="style.css">
+    <title>Webner games</title>
   </head>
   <body>
     <label id="test">yhdk</label>
