--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>Webner games</title>
   </head>
   <body>
-    <label id="test">yhdk</label>
+    <center>
+      <div style="background-color: black; width: 95%; height: 20px">
+        <div id="progress" style="background-color: green; width:0%; height:100%"></div>
+      </div>
+    </center>
     <script src="script.js"></script>
   </body>
 </html>
