--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <title>Webner games</title>
   </head>
   <body>
-    <center>
-      <div style="background-color: black; width: 95%; height: 20px">
-        <div id="progress" style="background-color: green; width:0%; height:100%"></div>
-      </div>
-    </center>
+    <label></label>
     <script src="script.js"></script>
   </body>
 </html>
