--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Webner games</title>
   </head>
   <body>
-    <label></label>
+    <label id="progress"></label>
     <script src="script.js"></script>
   </body>
 </html>
