--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   </head>
   <body>
     <label id="progress"></label>
+
+    <br>
+
+    <button class="choiceButton">option 1</button>
+    <button class="choiceButton">option 2</button>
+    <button class="choiceButton">option 3</button>
+    
     <script src="script.js"></script>
   </body>
 </html>
