--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>Webner games</title>
   </head>
   <body>
-    <label id="progress"></label>
+    <label id="progress">0% Believability</label>
+    <label>Question 1/10</label>
 
     <br>
-
+    
     <button class="choiceButton">option 1</button>
     <button class="choiceButton">option 2</button>
     <button class="choiceButton">option 3</button>
