--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   </head>
   <body>
     <label id="progress">0% Believability</label>
-    <label>Question 1/10</label>
+    <label id="questionNum">Question 1/10</label>
 
     <br>
     
-    <button class="choiceButton">option 1</button>
-    <button class="choiceButton">option 2</button>
-    <button class="choiceButton">option 3</button>
+    <button id="choiceButton1" class="choiceButton">option 1</button>
+    <button id="choiceButton2" class="choiceButton">option 2</button>
+    <button id="choiceButton3" class="choiceButton">option 3</button>
     
     <script src="script.js"></script>
   </body>
