--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <label id="questionNum">Question 1/10</label>
 
     <br>
+
+    <label id="question">Why do you think that continental drift exists?</label>
     
-    <button id="choiceButton1" class="choiceButton">option 1</button>
-    <button id="choiceButton2" class="choiceButton">option 2</button>
-    <button id="choiceButton3" class="choiceButton">option 3</button>
+    <button id="choiceButton1" class="choiceButton">They look like puzzle pieces sticking together</button>
+    <button id="choiceButton2" class="choiceButton">The fossils are the same in South America and Europe</button>
+    <button id="choiceButton3" class="choiceButton">The metamorphic rock found shows signs of scraping, proving the continents moved.</button>
     
     <script src="script.js"></script>
   </body>
