--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <button id="choiceButton1" class="choiceButton">They look like puzzle pieces sticking together</button>
     <button id="choiceButton2" class="choiceButton">The fossils are the same in South America and Europe</button>
-    <button id="choiceButton3" class="choiceButton">The metamorphic rock found shows signs of scraping, proving the continents moved.</button>
+    <button id="choiceButton3" class="choiceButton">Metamorphic rock shows signs of scraping, proving continents moved.</button>
     
     <script src="script.js"></script>
   </body>
