--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css">
-    <title>Webner games</title>
+    <title>Wegner games</title>
   </head>
   <body>
     <label id="progress">0% Believability</label>
