--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <br>
     
     <button id="choiceButton1" class="choiceButton">They look like puzzle pieces sticking together</button>
-    <button id="choiceButton2" class="choiceButton">The fossils are the same in South America and Europe</button>
+    <button id="choiceButton2" class="choiceButton">Because cats are everywhere in the world.</button>
     <button id="choiceButton3" class="choiceButton">Metamorphic rock shows signs of scraping, proving land moved.</button>
     
     <script src="script.js"></script>
