--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button id="choiceButton1" class="choiceButton">They look like puzzle pieces sticking together</button>
     <button id="choiceButton2" class="choiceButton">Because cats are everywhere in the world</button>
     <button id="choiceButton3" class="choiceButton">Metamorphic rock shows signs of scraping, proving land moved</button>
-    <img scr="wegner.jpg">
+    <div id="wegnerImage"></div>
     <script src="script.js"></script>
   </body>
 </html>
