--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <button id="choiceButton2" class="choiceButton">Because cats are everywhere in the world</button>
     <button id="choiceButton3" class="choiceButton">Metamorphic rock shows signs of scraping, proving land moved</button>
     <div id="wegnerImage"></div>
+    <div id="pangeaImage"></div>
     <script src="script.js"></script>
   </body>
 </html>
