--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     <br>
 
     <label id="question">Why do you think that continental drift exists?</label>
+    
+    <br>
     <br>
     
     <button id="choiceButton1" class="choiceButton">They look like puzzle pieces sticking together</button>
     <button id="choiceButton2" class="choiceButton">Because cats are everywhere in the world</button>
     <button id="choiceButton3" class="choiceButton">Metamorphic rock shows signs of scraping, proving land moved</button>
-    <div id="wegnerImage"></div>
-    <div id="pangeaImage"></div>
+    <div style="border-width: 3px" id="wegnerImage"></div>
+    <div style="border-width: 3px" id="pangeaImage"></div>
     <script src="script.js"></script>
   </body>
 </html>
